hphp/hack/test/typecheck/namespace_global_builtin1.php
<?hh

namespace Test;

function f(): void {
  invariant(true, 'hi');
}

function g(): void {
  invariant_violation('hi');
}

function h(): void {
  \Test\f<>;
}
